--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,15 @@
 {
   "name": "src",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.9.1"
