--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/MavMMSZ/SN-Api#readme",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "express": "^4.21.2",
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.2",
