--- a/package.json
+++ b/package.json
@@ -2,35 +2,26 @@
   "name": "sn-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "build": "npx tsc",
     "start": "npm run build && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node dist/seeds/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MavMMSZ/SN-Api.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/MavMMSZ/SN-Api/issues"
-  },
+
   "homepage": "https://github.com/MavMMSZ/SN-Api#readme",
   "dependencies": {
-    "dateformat": "^5.0.3",
     "express": "^4.21.2",
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
-    "@types/dateformat": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.10.2",
     "typescript": "^5.7.2"
   }
 }
