--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "homepage": "https://github.com/MavMMSZ/SN-Api#readme",
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "express": "^4.21.2",
     "mongoose": "^8.9.2"
   },
